# agentgram-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json
bridge/: agent_bridge.py  agentgram_mcp_server.py  computer_use_mcp_server.py  google_places.py  pyproject.toml  requirements-computer-use.txt  requirements.txt
bridge/agentchat/: __init__.py  __main__.py  _dedup.py  auth.py  client.py  errors.py  executor.py  input_schema.py  invite.py  log_setup.py  models.py  rest.py  results.py  transport.py
bridge/agentchat/backends/: __init__.py  _attachment.py  _cli_utils.py  anthropic.py  claude_cli.py  codex_cli.py  openai.py  openclaw.py
bridge/agentchat/tools/: __init__.py  adapters.py  executor.py  parsing.py  sandbox.py  verification.py
bridge/tests/: conftest.py  test_attachment_translation.py  test_auth.py  test_claude_cli_cleanup.py  test_client.py  test_executor_email.py  test_executor_stale_context.py  test_input_schema.py  test_models.py  test_progress_callback.py  test_result_presentations.py  test_streaming_callback.py  test_terminal_tool_short_circuit.py  test_transport.py
src/: App.tsx  main.tsx  phoenix.d.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  process_manager.rs
src/components/: AgentBusyToast.tsx  AgentCanvas.tsx  AgentConfig.tsx  AgentRoutines.tsx  AgentRow.tsx  AgentSkills.tsx  AgentTemplates.tsx  AppShell.tsx  AvatarCropDialog.tsx  CreateAgentModal.tsx  Dashboard.tsx  FriendsView.tsx  HexGrid.tsx  LogViewer.tsx  LoginScreen.tsx  PaymentWalletCard.tsx  Profile.tsx  SoulEditor.tsx  TemplateCardPreview.tsx  TemplateGallery.tsx
src/design-tokens/: tokens.css
src/hooks/: useWebSocket.ts
src/lib/: agentTypes.ts  api.ts  avatarUrl.ts  buildSoulMd.ts  designSystemDebug.ts  fieldLimits.ts  imageProcessor.ts  linkify.ts  utils.ts  (+4 more)
(+56 files in other folders)
