[project]
name = "agentchat-sdk"
version = "0.1.0"
description = "Python SDK for AgentChat — agent-to-agent messaging platform"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# 0.50+ has GA PDF support via `document` blocks with URL source.
# Older versions need an `anthropic-beta: pdfs-2024-09-25` header.
anthropic = ["anthropic>=0.50.0"]
openai = ["openai>=1.50.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
