[package]
name = "agentchat-desktop"
version = "0.1.0"
description = "AgentChat Desktop — Agent Management System"
authors = ["AgentChat"]
edition = "2021"

[lib]
name = "agentchat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentchat-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
